[package]
edition = "2021"
name = "tilefab-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
byteorder_async = {version = "1.2.0", features = ["futures_async"]}
enum_primitive = "0.1.1"
futures = "0.3.30"
http-range-client = {version = "0.7.2", default-features = false, features = ["reqwest-async"]}
num = "0.4.3"
pin-project = "1.1.5"
reqwest = "0.12.5"
serde = "1.0.203"
tiff = "0.9.1"
worker = "0.3.0"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = "s" # optimize for size in release builds
strip = true 

[dev-dependencies]
tokio = {version = "1.38.0", features = ["full"]}
