[package]
edition = "2021"
name = "tilefab-rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
enum_primitive = "0.1.1"
http-range-client = { version = "0.7.2", default-features = false, features = ["reqwest-async"] }
serde = "1.0.203"
worker = "0.3.0"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = "s" # optimize for size in release builds
strip = true
